test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/valid/libraries/external_tentative_var.plx
#  Tentatively define a variable, and make sure it's initialized to 0. 
pub x: i32;

pub fn read_x(none) i32 {
    return x
}
