test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/static_and_extern.plx
# A declaration cannot include both static and extern specifiers
extrn data a: i32;

pub fn main(none) i32 {
    return 0
}
